lang.java.statics.test/tests/positive/packages/class-visible-in-own-compilation-unit-of-toplevel-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    public class A {
        public A a;
    }

}
