lang.java.statics.test/tests/negative/packages/unit-with-partial-package.no.javtest
STATIX fail 
JAVAC  fail 

[p] {

    [q] {

        [A]
        package p;
        public class A {}

    }
}
